--- a/souvenir.html
+++ b/souvenir.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "souvenir.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "souvenir.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,8 +11,8 @@
   <title>SOUVENIR</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/souvenir.css?371143350" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4247052287"/>
+  <link rel="stylesheet" type="text/css" href="css/souvenir.css?53211886" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -52,6 +52,103 @@ var __adobewebfontsappname__ = "muse";
       </div>
      </div>
     </div>
+    <div class="browser_width colelem" id="u3558-4-bw">
+     <div class="clearfix" id="u3558-4"><!-- content -->
+      <p><span id="u3558">PIANO PERFORMANCE</span></p>
+     </div>
+    </div>
+    <div class="browser_width colelem" id="u3560-4-bw">
+     <div class="clearfix" id="u3560-4"><!-- content -->
+      <p>&quot;Souvenir&quot;</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u3561-10"><!-- content -->
+     <p>&nbsp;&nbsp;&nbsp;&nbsp; For the last shows of the 2015-2016 Season for the Drama Dawg Theatre Company, the annual Senior Student Directed One-Act Plays were in order. It being my first year as a Varsity Technician, I was in the first to be picked and the top groups to be assigned to in terms of potential plays to work. Due to my background in musical performance, I was specially chosen to take part in Joseph Cambell's production of &quot;Souvenir: A Fantasia on the Life of Florence Foster Jenkins&quot;.</p>
+     <p>&nbsp;</p>
+     <p>&nbsp;&nbsp;&nbsp;&nbsp; &quot;Souvenir&quot; is based on a true story upon Florence Foster Jenkins, an opera singer that rose to stardom because of her unique 'inner voice'. Due to the heavy aria and opera repertoire, the playbook practically calls for a live piano accompanist, which is where I became a part of the picture. My instrumental performance experience on piano had only been in existance for a few months, as the only other experience I had as a pianist for an ensemble was for the 2016 UIL Concert Band program for the McKinney North High School Bulldawg Band's Honors Band; serving as the pianist for our performances of &quot;Danzon No. 2&quot; by Antonio Márquez. However, I was ready to step up to the task at hand, getting all of the excerpts learned within a month.</p>
+     <p>&nbsp;</p>
+     <p>&nbsp;&nbsp;&nbsp;&nbsp; The main struggle during the learning period was mainly not the excerpts themselves. As classical pieces, they fit the common tonality and composition as any étude, so it was easy to just think, &quot;execute an E minor arpeggio starting on the E above middle C.&quot; The main problems were getting the contemporary jazz piece, &quot;One With My Baby,&quot; under my fingers, as well as finding time to practice all of the music. March to May being the arts' competition season, I was floored with Winter Guard Championships and Band UIL, as well as the closure of the year for academics with AP and SAT Testing. I took my lunch periods to practice on the Choir Hall piano and re-allocated my meals across my class periods to maximize free time. All of my efforts culminated into a pleasant performance after only a month of preparation.</p>
+    </div>
+    <div class="SlideShowWidget clearfix widget_invisible colelem" id="slideshowu3576"><!-- none box -->
+     <div class="popup_anchor" id="u3597popup">
+      <div class="SlideShowContentPanel rgba-background clearfix" id="u3597"><!-- stack box -->
+       <div class="SSSlide clip_frame grpelem" id="u3667"><!-- image -->
+        <img class="block ImageInclude" id="u3667_img" data-src="images/karla%20edge%201535.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3676"><!-- image -->
+        <img class="block ImageInclude" id="u3676_img" data-src="images/karla%20edge%201543.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3685"><!-- image -->
+        <img class="block ImageInclude" id="u3685_img" data-src="images/karla%20edge%201547.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3694"><!-- image -->
+        <img class="block ImageInclude" id="u3694_img" data-src="images/karla%20edge%201549.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3703"><!-- image -->
+        <img class="block ImageInclude" id="u3703_img" data-src="images/karla%20edge%201568.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3712"><!-- image -->
+        <img class="block ImageInclude" id="u3712_img" data-src="images/karla%20edge%201570.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3721"><!-- image -->
+        <img class="block ImageInclude" id="u3721_img" data-src="images/karla%20edge%201578.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3730"><!-- image -->
+        <img class="block ImageInclude" id="u3730_img" data-src="images/karla%20edge%201584.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3739"><!-- image -->
+        <img class="block ImageInclude" id="u3739_img" data-src="images/karla%20edge%201585.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u3748"><!-- image -->
+        <img class="block ImageInclude" id="u3748_img" data-src="images/karla%20edge%201606.jpg" src="images/blank.gif" alt="" data-width="346" data-height="461"/>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u3578popup">
+      <div class="SSSlideLinks clearfix" id="u3578"><!-- horizontal-rows box -->
+       <div class="SSSlideLink clip_frame grpelem" id="u3670"><!-- image -->
+        <img class="block" id="u3670_img" src="images/karla%20edge%201535-crop-u3670.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3679"><!-- image -->
+        <img class="block" id="u3679_img" src="images/karla%20edge%201543-crop-u3679.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3688"><!-- image -->
+        <img class="block" id="u3688_img" src="images/karla%20edge%201547-crop-u3688.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3697"><!-- image -->
+        <img class="block" id="u3697_img" src="images/karla%20edge%201549-crop-u3697.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3706"><!-- image -->
+        <img class="block" id="u3706_img" src="images/karla%20edge%201568-crop-u3706.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3715"><!-- image -->
+        <img class="block" id="u3715_img" src="images/karla%20edge%201570-crop-u3715.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3724"><!-- image -->
+        <img class="block" id="u3724_img" src="images/karla%20edge%201578-crop-u3724.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3733"><!-- image -->
+        <img class="block" id="u3733_img" src="images/karla%20edge%201584-crop-u3733.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3742"><!-- image -->
+        <img class="block" id="u3742_img" src="images/karla%20edge%201585-crop-u3742.jpg" alt="" width="100" height="75"/>
+       </div>
+       <div class="SSSlideLink clip_frame grpelem" id="u3751"><!-- image -->
+        <img class="block" id="u3751_img" src="images/karla%20edge%201606-crop-u3751.jpg" alt="" width="100" height="75"/>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u3606-4popup">
+      <div class="SSPreviousButton clearfix" id="u3606-4"><!-- content -->
+       <p>&lt;</p>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u3593-4popup">
+      <div class="SSNextButton clearfix" id="u3593-4"><!-- content -->
+       <p>&gt;</p>
+      </div>
+     </div>
+    </div>
     <div class="verticalspacer"></div>
    </div>
   </div>
@@ -65,6 +162,10 @@ var __adobewebfontsappname__ = "muse";
   <script src="scripts/museutils.js?183364071" type="text/javascript"></script>
   <script src="scripts/jquery.musemenu.js?3957776250" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?71412426" type="text/javascript"></script>
+  <script src="scripts/webpro.js?3803554875" type="text/javascript"></script>
+  <script src="scripts/musewpslideshow.js?242596657" type="text/javascript"></script>
+  <script src="scripts/jquery.museoverlay.js?493285861" type="text/javascript"></script>
+  <script src="scripts/touchswipe.js?4038331989" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    $(document).ready(function() { try {
@@ -75,6 +176,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initWidget('.MenuBar', function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.resizeHeight()/* resize height */
+Muse.Utils.initWidget('#slideshowu3576', function(elem) { $(elem).data('widget', new WebPro.Widget.ContentSlideShow(elem, {autoPlay:false,displayInterval:5000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:true,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false})); });/* #slideshowu3576 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
