--- a/13-14-marching.html
+++ b/13-14-marching.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "13-14-marching.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "13-14-marching.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/13-14-marching.css?471883158" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/13-14-marching.css?472479206" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -63,15 +63,17 @@ var __adobewebfontsappname__ = "muse";
      </div>
     </div>
     <div class="clearfix colelem" id="u3007-4"><!-- content -->
-     <p>&nbsp;&nbsp;&nbsp;&nbsp; &quot;Enigmatic Directions&quot; is the first show I had marched. On the field as Clarinet 13, I excelled in learning the bent-leg marching style, showing my ability to learn quickly. One of the highlights of the season was having one of the senior drum majors tell me I was marching like a senior. Encouragement like that is very important in keeping morale up and invigorating followers, something I have adopted in my suite of leadership skills.</p>
+     <p>&nbsp;&nbsp;&nbsp;&nbsp; &quot;Enigmatic Directions&quot; is the first show I had marched. On the field as Clarinet 13, I excelled in learning both the bent-leg marching and straight-leg marching styles, showing my ability to learn quickly. One of the highlights of the season was having one of the senior drum majors tell me I was marching like a senior. Encouragement like that is very important in keeping morale up and invigorating followers, something I have adopted in my suite of leadership skills.</p>
     </div>
     <div class="colelem" id="u3004"><!-- custom html -->
      
 <iframe class="actAsDiv" width="920" height="518" src="http://www.youtube.com/embed/ELk92NisL-0?autoplay=0&loop=0&showinfo=0&theme=dark&color=red&controls=1&modestbranding=0&start=0&fs=1&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
 
 </div>
-    <div class="clearfix colelem" id="u3009-4"><!-- content -->
-     <p>&nbsp;&nbsp;&nbsp;&nbsp; The performance shown here is our UIL Area Marching Contest Finals performance. 2013 being a state marching year for 4A schools, it was possible that our school would advance to the 4A UIL State Marching Contest by making the top 5 in finals. We performed full-out in our finals perfomance. However, a looming storm marked by lightning can be seen in the sky in the video. Our performance was one of the few finals performances that actually occurred before finals itself was rained out. As finals were canceled, the scores from the preliminary round were used. The McKinney North High School Band earned 6th place, one spot below making state. The band was devastated, but the freshmen and sophomores of that band mustered all of their efforts for the next two years to earn a spot in the State Marching Contest.</p>
+    <div class="clearfix colelem" id="u3009-6"><!-- content -->
+     <p id="u3009-2">&nbsp;&nbsp;&nbsp;&nbsp; The performance shown here is our UIL Area Marching Contest Finals performance. 2013 being a state marching year for 4A schools, it was possible that our school would advance to the 4A UIL State Marching Contest by making the top 5 in finals. We performed full-out in our finals performance. However, a looming storm marked by lightning can be seen in the sky in the video. Our performance was one of the few finals performances that actually occurred before finals itself was rained out. As finals were canceled, the scores from the preliminary round were used. The McKinney North High School Band earned 6th place, one spot below making state. The band was devastated, but the freshmen and sophomores of that band mustered all of their efforts for the next two years to earn a spot in the State Marching Contest.</p>
+     <p id="u3009-3">&nbsp;</p>
+     <p id="u3009-4">&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
    </div>
