--- a/14-15-marching.html
+++ b/14-15-marching.html
@@ -11,8 +11,8 @@
   <title>14-15 MARCHING</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4247052287"/>
-  <link rel="stylesheet" type="text/css" href="css/14-15-marching.css?4036006850" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
+  <link rel="stylesheet" type="text/css" href="css/14-15-marching.css?3856867312" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -63,21 +63,24 @@ var __adobewebfontsappname__ = "muse";
      </div>
     </div>
     <div class="clearfix colelem" id="u3014-4"><!-- content -->
-     <p>&nbsp;&nbsp;&nbsp;&nbsp; &quot;Wild Blue Yonder&quot; is the second show I've marched, and the first show I've marched as the clarinet section leader. On the field as Clarinet 3, I served as a role-model marcher for the new style of marching we adopted: straight-leg marching. Building off of my leadership skills from managing an online community, I continued building my leadership skills face-to-face in a flexible environment.</p>
+     <p>&nbsp;&nbsp;&nbsp;&nbsp; &quot;Wild Blue Yonder&quot; is the second show I've marched, and the first show I've marched as the clarinet section leader. On the field as Clarinet 3, I served as a role-model marcher for the full transition to straight-leg marching. Building off of my leadership skills from managing an online community, I continued building my leadership skills face-to-face in a flexible environment.</p>
     </div>
     <div class="colelem" id="u3011"><!-- custom html -->
      
 <iframe class="actAsDiv" width="920" height="518" src="http://www.youtube.com/embed/T4y9dnpagsk?autoplay=0&loop=0&showinfo=0&theme=dark&color=red&controls=1&modestbranding=0&start=0&fs=1&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
 
 </div>
-    <div class="clearfix colelem" id="u3015-14"><!-- content -->
+    <div class="clearfix colelem" id="u3015-21"><!-- content -->
      <p id="u3015-2">&nbsp;&nbsp;&nbsp;&nbsp; The performance shown here is from the last competition of the season, the Wylie Marching Invitational. The show itself goes through the life of two life-long friends that enlist in the Air Force together. Pieces featured in order are:</p>
      <p id="u3015-3">&nbsp;</p>
      <p id="u3015-5">&quot;We Love to Fly and It Shows&quot; - Delta Airlines 1987 Jingle</p>
-     <p id="u3015-7">jfjf</p>
-     <p id="u3015-9">&quot;One Day I'll Fly Away&quot; - from Moulin Rouge</p>
+     <p id="u3015-7">&quot;One Day I'll Fly Away&quot; - from Moulin Rouge</p>
+     <p id="u3015-9">&quot;Jumpstart&quot; - Carol Brittin Chambers</p>
      <p id="u3015-11">&quot;Adagio for Strings&quot; - Samuel Barber</p>
-     <p id="u3015-12">&nbsp;</p>
+     <p id="u3015-13">&quot;Flight&quot; - Carol Brittin Chambers</p>
+     <p id="u3015-14">&nbsp;</p>
+     <p id="u3015-18">Show arranged by Carol Brittin Chambers - <a class="nonblock" href="http://aspenwoodmusic.com">aspenwoodmusic.com</a></p>
+     <p id="u3015-19">&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
    </div>
