--- a/brodie.html
+++ b/brodie.html
@@ -11,8 +11,8 @@
   <title>BRODIE</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4247052287"/>
-  <link rel="stylesheet" type="text/css" href="css/brodie.css?125275320" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
+  <link rel="stylesheet" type="text/css" href="css/brodie.css?10610721" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -414,7 +414,7 @@ var __adobewebfontsappname__ = "muse";
 </div>
      </div>
     </div>
-    <div class="SlideShowWidget clearfix widget_invisible colelem" id="slideshowu2831"><!-- none box -->
+    <div class="SlideShowWidget clearfix widget_invisible pinned-colelem" id="slideshowu2831"><!-- none box -->
      <div class="popup_anchor" id="u2832popup">
       <div class="SlideShowContentPanel rgba-background clearfix" id="u2832"><!-- stack box -->
        <div class="SSSlide clip_frame grpelem" id="u2917"><!-- image -->
