--- a/16-17-marching.html
+++ b/16-17-marching.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "16-17-marching.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "16-17-marching.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -68,7 +68,7 @@ var __adobewebfontsappname__ = "muse";
 
 </div>
     <div class="clearfix colelem" id="u3024-4"><!-- content -->
-     <p>-&nbsp; IN PROGRESS&nbsp; -</p>
+     <p>-&nbsp; SEASON IN PROGRESS&nbsp; -</p>
     </div>
     <div class="verticalspacer"></div>
    </div>
