--- a/souvenir.html
+++ b/souvenir.html
@@ -11,8 +11,8 @@
   <title>SOUVENIR</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4247052287"/>
-  <link rel="stylesheet" type="text/css" href="css/souvenir.css?53211886" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
+  <link rel="stylesheet" type="text/css" href="css/souvenir.css?4101557922" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -67,9 +67,10 @@ var __adobewebfontsappname__ = "muse";
      <p>&nbsp;</p>
      <p>&nbsp;&nbsp;&nbsp;&nbsp; &quot;Souvenir&quot; is based on a true story upon Florence Foster Jenkins, an opera singer that rose to stardom because of her unique 'inner voice'. Due to the heavy aria and opera repertoire, the playbook practically calls for a live piano accompanist, which is where I became a part of the picture. My instrumental performance experience on piano had only been in existance for a few months, as the only other experience I had as a pianist for an ensemble was for the 2016 UIL Concert Band program for the McKinney North High School Bulldawg Band's Honors Band; serving as the pianist for our performances of &quot;Danzon No. 2&quot; by Antonio Márquez. However, I was ready to step up to the task at hand, getting all of the excerpts learned within a month.</p>
      <p>&nbsp;</p>
-     <p>&nbsp;&nbsp;&nbsp;&nbsp; The main struggle during the learning period was mainly not the excerpts themselves. As classical pieces, they fit the common tonality and composition as any étude, so it was easy to just think, &quot;execute an E minor arpeggio starting on the E above middle C.&quot; The main problems were getting the contemporary jazz piece, &quot;One With My Baby,&quot; under my fingers, as well as finding time to practice all of the music. March to May being the arts' competition season, I was floored with Winter Guard Championships and Band UIL, as well as the closure of the year for academics with AP and SAT Testing. I took my lunch periods to practice on the Choir Hall piano and re-allocated my meals across my class periods to maximize free time. All of my efforts culminated into a pleasant performance after only a month of preparation.</p>
+     <p>&nbsp;&nbsp;&nbsp;&nbsp; The main struggle during the learning period was mainly not the excerpts themselves. As classical pieces, they fit the common tonality and composition as any étude, so it was easy to just think, &quot;execute an E major arpeggio starting on the E above middle C.&quot; The main problems were getting the contemporary jazz piece, &quot;One With My Baby,&quot; under my fingers, as well as finding time to practice all of the music. March to May being the arts' competition season, I was floored with Winter Guard Championships and Band UIL, as well as the closure of the year for academics with AP and SAT Testing. I took my lunch periods to practice on the Choir Hall piano and re-allocated my meals across my class periods to maximize free time. All of my efforts culminated into a pleasant performance after only a month of preparation.</p>
     </div>
     <div class="SlideShowWidget clearfix widget_invisible colelem" id="slideshowu3576"><!-- none box -->
+     &nbsp;
      <div class="popup_anchor" id="u3597popup">
       <div class="SlideShowContentPanel rgba-background clearfix" id="u3597"><!-- stack box -->
        <div class="SSSlide clip_frame grpelem" id="u3667"><!-- image -->
