--- a/junior.html
+++ b/junior.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/junior.css?394794507" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/junior.css?36887932" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -68,7 +68,8 @@ var __adobewebfontsappname__ = "muse";
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="pu2130"><!-- group -->
+    <div class="clearfix colelem" id="pu3832"><!-- group -->
+     <div class="museBGSize grpelem" id="u3832"><!-- simple frame --></div>
      <div class="museBGSize grpelem" id="u2130"><!-- simple frame --></div>
      <div class="museBGSize grpelem" id="u2132"><!-- simple frame --></div>
      <nav class="MenuBar clearfix grpelem" id="menuu2133"><!-- horizontal box -->
@@ -77,6 +78,9 @@ var __adobewebfontsappname__ = "muse";
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u2134"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u2137" href="souvenir.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u2139-4"><!-- content --><p>SOUVENIR</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u3825"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3828" href="campaign.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3831-4"><!-- content --><p>CAMPAIGN</p></div></a>
       </div>
      </nav>
     </div>
