--- a/marching-band.html
+++ b/marching-band.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "marching-band.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "marching-band.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/marching-band.css?371143350" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/marching-band.css?3803390427" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -52,6 +52,22 @@ var __adobewebfontsappname__ = "muse";
       </div>
      </div>
     </div>
+    <nav class="MenuBar clearfix colelem" id="menuu3780"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u3795"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3798" href="interview.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3799-4"><!-- content --><p>ENIGMATIC DIRECTIONS</p></div></a>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u3781"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3782" href="short-film.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3785-4"><!-- content --><p>WILD BLUE YONDER</p></div></a>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u3788"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3791" href="dirty-rotten-scoundrels.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3793-4"><!-- content --><p>MISS RED</p></div></a>
+     </div>
+    </nav>
+    <nav class="MenuBar clearfix colelem" id="menuu3804"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u3805"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3808" href="brodie.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3810-4"><!-- content --><p>V. VI. VII.</p></div></a>
+     </div>
+    </nav>
     <div class="verticalspacer"></div>
    </div>
   </div>
