--- a/performance.html
+++ b/performance.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "performance.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "performance.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/performance.css?23781048" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/performance.css?3759398380" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -53,18 +53,15 @@ var __adobewebfontsappname__ = "muse";
      </div>
     </div>
     <div class="clearfix colelem" id="u3532"><!-- group -->
-     <div class="museBGSize grpelem" id="u3555"><!-- simple frame --></div>
-     <div class="museBGSize grpelem" id="u3557"><!-- simple frame --></div>
-     <div class="museBGSize grpelem" id="u3556"><!-- simple frame --></div>
      <nav class="MenuBar clearfix grpelem" id="menuu3533"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u3541"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3544" href="audio-overhaul.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3547-4"><!-- content --><p>MARCHING BAND</p></div></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3544" href="marching-band.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3547-4"><!-- content --><p>MARCHING BAND</p></div></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3548"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3549" href="cereal-box.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3550-4"><!-- content --><p>CONCERT BAND</p></div></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3549" href="concert-band.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3550-4"><!-- content --><p>CONCERT BAND</p></div></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3534"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3535" href="light-show.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3537-4"><!-- content --><p>WINTER GUARD</p></div></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3535" href="winter-guard.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3537-4"><!-- content --><p>WINTER GUARD</p></div></a>
       </div>
      </nav>
     </div>
@@ -81,7 +78,6 @@ var __adobewebfontsappname__ = "muse";
   <script src="scripts/museutils.js?183364071" type="text/javascript"></script>
   <script src="scripts/jquery.musemenu.js?3957776250" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?71412426" type="text/javascript"></script>
-  <script src="scripts/jquery.musepolyfill.bgsize.js?4004268962" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    $(document).ready(function() { try {
