--- a/15-16-marching.html
+++ b/15-16-marching.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/15-16-marching.css?427908045" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/15-16-marching.css?205586013" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -63,24 +63,22 @@ var __adobewebfontsappname__ = "muse";
      </div>
     </div>
     <div class="clearfix colelem" id="u3769-4"><!-- content -->
-     <p>&nbsp;&nbsp;&nbsp;&nbsp; &quot;Miss Red&quot; is by far my favorite marching show to partake in.</p>
+     <p>&nbsp;&nbsp;&nbsp;&nbsp; &quot;Miss Red&quot; is by far my favorite marching show to partake in. As principal clarinetist and clarinet section leader, I worked with the Band Leadership Team to lead the entire band all the way to the UIL State Marching Contest.</p>
     </div>
     <div class="colelem" id="u3766"><!-- custom html -->
      
 <iframe class="actAsDiv" width="920" height="518" src="http://www.youtube.com/embed/d3XtvagoHFk?autoplay=0&loop=0&showinfo=0&theme=dark&color=red&controls=1&modestbranding=0&start=0&fs=1&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
 
 </div>
-    <div class="clearfix colelem" id="u3770-21"><!-- content -->
-     <p id="u3770-2">&nbsp;&nbsp;&nbsp;&nbsp; The performance shown here is from the last competition of the season, the Wylie Marching Invitational. The show itself goes through the life of two life-long friends that enlist in the Air Force together. Pieces featured in order are:</p>
-     <p id="u3770-3">&nbsp;</p>
-     <p id="u3770-5">&quot;We Love to Fly and It Shows&quot; - Delta Airlines 1987 Jingle</p>
-     <p id="u3770-7">&quot;One Day I'll Fly Away&quot; - from Moulin Rouge</p>
-     <p id="u3770-9">&quot;Jumpstart&quot; - Carol Brittin Chambers</p>
-     <p id="u3770-11">&quot;Adagio for Strings&quot; - Samuel Barber</p>
-     <p id="u3770-13">&quot;Flight&quot; - Carol Brittin Chambers</p>
-     <p id="u3770-14">&nbsp;</p>
-     <p id="u3770-18">Show arranged by Carol Brittin Chambers - <a class="nonblock" href="http://aspenwoodmusic.com">aspenwoodmusic.com</a></p>
-     <p id="u3770-19">&nbsp;</p>
+    <div class="clearfix colelem" id="u3770-18"><!-- content -->
+     <p id="u3770-2">&nbsp;&nbsp;&nbsp;&nbsp; The performance shown here is our performance in the Alamodome in State Marching Pre-Lims. The pieces featured in the show are as follows:</p>
+     <p id="u3770-4">&quot;Little Red Riding Hood&quot; - Stephanie Lincoln</p>
+     <p id="u3770-6">&quot;Jumpstart&quot; - Carol Brittin Chambers</p>
+     <p id="u3770-8">&quot;My Immortal&quot; - Evanescence</p>
+     <p id="u3770-10">&quot;Flight&quot; - Carol Brittin Chambers</p>
+     <p id="u3770-11">&nbsp;</p>
+     <p id="u3770-15">Show arranged by Carol Brittin Chambers - <a class="nonblock" href="http://aspenwoodmusic.com">aspenwoodmusic.com</a></p>
+     <p id="u3770-16">&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
    </div>
