--- a/16-17-marching.html
+++ b/16-17-marching.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "16-17-marching.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "16-17-marching.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/16-17-marching.css?126129034" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/16-17-marching.css?3921687325" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -64,11 +64,20 @@ var __adobewebfontsappname__ = "muse";
     </div>
     <div class="colelem" id="u3025"><!-- custom html -->
      
-<iframe class="actAsDiv" width="920" height="518" src="http://www.youtube.com/embed/uD3AlyDWFqM?autoplay=0&loop=0&showinfo=0&theme=dark&color=red&controls=1&modestbranding=0&start=0&fs=1&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe class="actAsDiv" width="920" height="518" src="http://www.youtube.com/embed/7sd8CWkjkQg?autoplay=0&loop=0&showinfo=0&theme=dark&color=red&controls=1&modestbranding=0&start=0&fs=1&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
 
 </div>
-    <div class="clearfix colelem" id="u3024-4"><!-- content -->
-     <p>-&nbsp; SEASON IN PROGRESS&nbsp; -</p>
+    <div class="clearfix colelem" id="u4167-21"><!-- content -->
+     <p id="u4167-2">&nbsp;&nbsp;&nbsp;&nbsp; The pieces featured in the show are as follows:</p>
+     <p id="u4167-3">&nbsp;</p>
+     <p id="u4167-5">&quot;I. Mars, the Bringer of War&quot; - Gustav Holst</p>
+     <p id="u4167-7">&quot;Take Five&quot; - Dave Brubeck</p>
+     <p id="u4167-9">&quot;Nothing Else Matters&quot; - Metallica</p>
+     <p id="u4167-11">&quot;Minuano (Six Eight)&quot; - Pat Matheny</p>
+     <p id="u4167-13">&quot;160 BPM&quot; - Hanz Zimmer</p>
+     <p id="u4167-14">&nbsp;</p>
+     <p id="u4167-18">Show arranged by Carol Brittin Chambers - <a class="nonblock" href="http://aspenwoodmusic.com">aspenwoodmusic.com</a></p>
+     <p id="u4167-19">&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
    </div>
