--- a/campaign.html
+++ b/campaign.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/campaign.css?4100057477" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/campaign.css?135555778" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -67,6 +67,16 @@ var __adobewebfontsappname__ = "muse";
 <iframe class="actAsDiv" width="920" height="518" src="http://www.youtube.com/embed/J49aPCBo44E?autoplay=0&loop=0&showinfo=0&theme=dark&color=red&controls=1&modestbranding=0&start=0&fs=1&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
 
 </div>
+    <div class="browser_width colelem" id="u3849-4-bw">
+     <div class="clearfix" id="u3849-4"><!-- content -->
+      <p>ASSIGNMENT: Create a mock presidential candidate and their campaign.</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u3848-7"><!-- content -->
+     <p>&nbsp;&nbsp;&nbsp; As the end of the course final, the AP English Language and Composition classes all create a presidential candidate and campaign for the vote of their classmates. As a person with a high background in the technical side of the arts, this project was absolutely made for me. My group was quick to draft a script for the short campaign video, and I worked out all the planning details: shots, audio equipment, scheduling. Together, we worked out locations and actors. It was difficult to work around our band schedule as we were preparing for the next season, but meticulous planning paid off and we were able to shoot all of our scenes in one day with crisp audio and great composition.</p>
+     <p>&nbsp;</p>
+     <p>Video was recorded with a Canon EOS Rebel T5. Audio was recorded with Apple Earpods connected to an Apple iPhone.</p>
+    </div>
     <div class="verticalspacer"></div>
    </div>
   </div>
