--- a/junior-high.html
+++ b/junior-high.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/junior-high.css?371143350" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/junior-high.css?465262731" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -52,6 +52,11 @@ var __adobewebfontsappname__ = "muse";
       </div>
      </div>
     </div>
+    <nav class="MenuBar clearfix colelem" id="menuu3970"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u3971"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u3974" href="16-17-marching.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3977-4"><!-- content --><p>MINING MINECRAFT MINDS</p></div></a>
+     </div>
+    </nav>
     <div class="verticalspacer"></div>
    </div>
   </div>
