--- a/winter-guard.html
+++ b/winter-guard.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3950230183"/>
-  <link rel="stylesheet" type="text/css" href="css/winter-guard.css?371143350" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/winter-guard.css?3926606104" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -52,6 +52,17 @@ var __adobewebfontsappname__ = "muse";
       </div>
      </div>
     </div>
+    <nav class="MenuBar clearfix colelem" id="menuu4055"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u4063"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u4066" href="14-15-guard.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u4068-4"><!-- content --><p>BEGIN AGAIN</p></div></a>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u4070"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u4073" href="15-16-guard.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u4074-4"><!-- content --><p>KNOTWORK</p></div></a>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u4056"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu rgba-background clearfix colelem" id="u4059" href="16-17-guard.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u4062-6"><!-- content --><p>BETWEEN THE</p><p>BOOKENDS</p></div></a>
+     </div>
+    </nav>
     <div class="verticalspacer"></div>
    </div>
   </div>
