--- a/dirty-rotten-scoundrels.html
+++ b/dirty-rotten-scoundrels.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.scrolleffects.js", "dirty-rotten-scoundrels.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "jquery.scrolleffects.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "dirty-rotten-scoundrels.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -216,7 +216,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initWidget('.MenuBar', function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.resizeHeight()/* resize height */
-$('#u2548').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,534],"fade":254},{"in":[534,534],"opacity":100},{"opacity":100,"in":[534,Infinity],"fade":50}]);/* scroll effect */
+$('#u2548').registerOpacityScrollEffect([{"in":[-Infinity,534],"fade":254,"opacity":0},{"in":[534,534],"opacity":100},{"in":[534,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 Muse.Utils.initWidget('#slideshowu2547', function(elem) { $(elem).data('widget', new WebPro.Widget.ContentSlideShow(elem, {autoPlay:false,displayInterval:5000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:true,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false})); });/* #slideshowu2547 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
