--- a/composition.html
+++ b/composition.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "composition.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "composition.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -53,7 +53,7 @@ var __adobewebfontsappname__ = "muse";
    </div>
    <div class="browser_width" id="u1888-bw">
     <div id="u1888"><!-- custom html -->
-     <iframe title="Sheet Music Req - Tumblr" src="http://sheetmusicreq.tumblr.com/tagged/band/" width="100%" height="1000" style="border: 0;"></iframe>
+     <iframe title="Sheet Music Req - Tumblr" src="http://sheetmusicreq.tumblr.com/tagged/sheet+music/" width="100%" height="1000" style="border: 0;"></iframe>
 </div>
    </div>
    <div class="verticalspacer"></div>
