--- a/composition.html
+++ b/composition.html
@@ -53,7 +53,7 @@ var __adobewebfontsappname__ = "muse";
    </div>
    <div class="browser_width" id="u1888-bw">
     <div id="u1888"><!-- custom html -->
-     <iframe title="Sheet Music Req - Tumblr" src="http://sheetmusicreq.tumblr.com/tagged/sheet+music/" width="100%" height="1000" style="border: 0;"></iframe>
+     <iframe title="Sheet Music Req - Tumblr" src="http://sheetmusicreq.tumblr.com/tagged/band" width="100%" height="1000" style="border: 0;"></iframe>
 </div>
    </div>
    <div class="verticalspacer"></div>
